--- a/src/app/components/layout/app-header/app-header.component.html
+++ b/src/app/components/layout/app-header/app-header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg start-demo-tour">
         <div class="container">
             <div class="logo-center">
                 <a class="navbar-brand" [routerLink]="['']" [routerLinkActive]="['active']"><img src="../../assets/logo-wink.png" /></a>
@@ -17,8 +17,8 @@
 
                 </ul>
             </div>
-            <span (click)="RestartTour()" class="start-demo-tour"></span>
-            <div class="collapse navbar-collapse d" *ngIf="isDesktopMenu" id="main-menu">
+            <!-- <span (click)="RestartTour()" class="start-demo-tour"></span> -->
+            <div class="collapse navbar-collapse d   " *ngIf="isDesktopMenu" id="main-menu">
                 <ul class="navbar-nav">
                     <li class="nav-item Shop-demo-tour">
                         <a class="nav-link" [routerLink]="['/store']" [routerLinkActive]="['active']">Shop</a>
@@ -78,10 +78,10 @@
                 <div class="logo-center">
                     <a class="navbar-brand" [routerLink]="['']" [routerLinkActive]="['active']"><img src="../../assets/logo-wink.png" /></a>
                 </div>
-            </div> 
+            </div>
 
 
-          
+
             <!-- <div class="searchOptionsbox" *ngIf="isSearchshow">
         <div class="close-ico">
           <a (click)="closeSearchbar()">
