--- a/src/app/components/store/product-detail/product-detail.component.css
+++ b/src/app/components/store/product-detail/product-detail.component.css
@@ -1049,7 +1049,9 @@ float: right;
 position: absolute;
 bottom: 9px;
 }
-
+.tooltipcontent {
+    background-color: #f2f2f2;
+}
 /* MEDIA QUERIES CSS */
 
 @media (min-width:1024px) and (max-width:1366px) {
