--- a/src/app/components/auth/sign-up/sign-up.component.html
+++ b/src/app/components/auth/sign-up/sign-up.component.html
@@ -69,16 +69,15 @@
               </div>
             </div>
             <div class="form-group mb-3">
-              <input type="text" placeholder="Birthday" class="form-control"  [ngClass]="{ 'is-invalid': submitted && f.dateOfBirth.errors }"
+              <input type="text" placeholder="Birthday" class="form-control" readonly="readonly" [ngClass]="{ 'is-invalid': submitted && f.dateOfBirth.errors }"
               bsDatepicker [maxDate]="maxDate" [bsConfig]="{ isAnimated: true, adaptivePosition: true, selectFromOtherMonth: true  }"  formControlName="dateOfBirth">
               <span class="valid-text">* Required</span>
               <div *ngIf="submitted && f.dateOfBirth.errors" class="invalid-feedback">
                 <div *ngIf="f.dateOfBirth.errors.required">Birthday is required</div>
-                <!-- <div *ngIf="f.dateOfBirth.errors.pattern">Date Of Birth format is not vaild</div> -->
-
               </div>
+              <div *ngIf="checkage" class="dateofbirth-invalid-feed-back">You have less than 14 old!</div>
             </div>
-                <div class="form-group mb-3">
+                 <div class="form-group mb-3">
                   <re-captcha id="recaptcha" name="recaptcha" required [ngClass]="{ 'is-invalid': submitted && f.recaptcha.errors }" formControlName="recaptcha"></re-captcha>
                   <span class="valid-text">* Required</span>
                   <div *ngIf="submitted && f.recaptcha.errors" class="invalid-feedback">
