--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12 p-0">
-            <img src="../../assets/banner-about.png"/>
+            <img src="../../assets/about-banner.jfif"/>
         </div>
     </div>
 </div>
